[package]
name = "Flowtee"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0.0"
portable-pty = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
strip-ansi-escapes = "0.2"
terminal_size = "0.4.3"
